# graphics

./: .gitignore  configure.ac
src/: Makefile.am  main.cc  triangle.f.glsl  triangle.v.glsl
